# sightline

./: .gitignore  LICENSE  README.md  chapter.md  config.yaml  pyproject.toml
docs/: sightline_chapter.md
scripts/: auto_label_modes.py  extract_frames.py  extract_weapon_templates.py  generate_strategies.py  train_mode_classifier.py
src/cod_analyst/: __init__.py  cli.py  config.py  pipeline.py
src/cod_analyst/analysis/: narrator.py  profiler.py  strategist.py
src/cod_analyst/api/: routes.py
src/cod_analyst/db/: schemas.py
src/cod_analyst/features/: formation.py  kill_events.py  movement.py
src/cod_analyst/game/: map_grid.py  models.py  round_segmenter.py
src/cod_analyst/ingest/: downloader.py  frame_sampler.py  gameplay_detector.py  video_loader.py
src/cod_analyst/ml/: event_transformer.py  formation_clustering.py  playstyle_embedding.py  route_clustering.py  trajectory_lstm.py
src/cod_analyst/vision/: color_clusterer.py  killfeed_parser.py  minimap_extractor.py  mode_classifier.py  player_detector.py  player_tracker.py  roster_ocr.py  scoreboard_ocr.py
web/src/app/: globals.css  layout.tsx  page.tsx
web/src/app/matches/: page.tsx
web/src/app/opponents/: page.tsx
web/src/app/playbook/: page.tsx
web/src/app/replay/: page.tsx
web/src/app/settings/: page.tsx
web/src/app/stats/: page.tsx
web/src/app/strategies/: page.tsx
web/src/components/: Sidebar.tsx
